<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asana Android Client</string>

    <!-- Menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_logout">Logout</string>
    <string name="action_filter_dismiss">Dismiss filter</string>

    <!-- Activities titles -->
    <string name="title_activity_oauth">OAuthActivity</string>
    <string name="title_detail_activity">Task details</string>

    <!-- Navigation drawer -->
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="drawer_workspaces_title">Workspaces</string>
    <string name="drawer_projects_title">Projects</string>

    <!-- Task list -->
    <string name="greeting_template" formatted="false">Good %s, %s</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">gsana.geaden.com</string>
    <string name="content_authority">"com.geaden.android.gsana.app"</string>

    <!-- Preferences related -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_toggl_api_key">TOGGL_API_KEY</string>
    <string name="pref_toggl_connect">Connect</string>
    <string name="pref_toggle_cancel">Cancel</string>
    <string name="pref_toggl_dialog_title">Connect to Toggl</string>
    <string name="pref_toggl_connect_title">Toggl</string>
    <string name="pref_toggle_connect_settings_key">toggl_settings_key</string>
    <string name="perf_toggle_connect_summary">Your Toggl API to enable time tracking</string>
    <string name="pref_toggl_enable">TOGGL_KEY_ENABLE</string>
    <string name="pref_toggl_enable_title">Enable time tracking with Toggl</string>
    <string name="notif_toggl_text">Toggl</string>
    <string name="notif_toggl_title">Toggl</string>
    <string name="pref_toggle_enabled_summary">Toggl integration enabled</string>
    <string name="pref_toggle_disabled_summary">Toggl integration disabled</string>
    <string name="msg_enter_valid_toggl_key">Enter Toggl Key. Checkout settings</string>
    <string name="failed_to_refresh_token">Failed to refresh token</string>
    <string name="task_link">Open task in Asana</string>

</resources>
