<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:title="@string/pref_toggl_connect_title"
        android:key="@string/pref_toggle_connect_settings_key">
        <CheckBoxPreference
            android:title="@string/pref_toggl_enable_title"
            android:key="@string/pref_toggl_enable"
            android:summary="Yes/No"/>
        <EditTextPreference
            android:title="@string/pref_toggl_dialog_title"
            android:summary="@string/perf_toggle_connect_summary"
            android:key="@string/pref_toggl_api_key"
            android:inputType="text"
            android:singleLine="true"/>
    </PreferenceCategory>
</PreferenceScreen>
